added resource for body styling

--- a/style.css
+++ b/style.css
@@ -14,3 +14,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+/* 
+body resource: https://css-tricks.com/perfect-full-page-background-image/#awesome-easy-progressive-css3-way
+*/
