--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  margin: 0;
+  margin: 0.5em;
   padding: 0;
   /*
       background-image: url("https://images.unsplash.com/photo-1448518340475-e3c680e9b4be?")
@@ -14,15 +14,25 @@ body {
   -o-background-size: cover;
   background-size: cover;
   text-shadow: 1px 1px 2px #474747;
+  color: white;
 }
 
-#photo-credit {
-  color: white;
-  margin: 1em;
-  padding: 0.5em;
+main {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 0;
+}
+
+.top-display {
   font-size: 1.5em;
-  position: absolute;
-  top: 35em;
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  text-align: center;
 }
 
 /* 
