--- a/style.css
+++ b/style.css
@@ -1,46 +1,45 @@
-html,
-body {
-  margin: 0.5em;
-  padding: 0;
-  /*
-      background-image: url("https://images.unsplash.com/photo-1448518340475-e3c680e9b4be?")
-      */
+* {
+  box-sizing: border-box;
 }
 
 body {
+  margin: 0;
   background: no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  text-shadow: 0px 0px 3px #302f2f;
+  text-shadow: 0px 0px 20px #302f2f;
+  font-family: Arial, Helvetica, sans-serif;
   color: white;
+  /*
+      background-image: url("https://images.unsplash.com/photo-1448518340475-e3c680e9b4be?")
+      */
 }
 
 main {
+  padding: 0.7em;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  margin: 0;
+  justify-content: space-between;
 }
 
-#top-display {
+div.top-display {
   font-size: 1.5em;
   display: flex;
   justify-content: space-between;
 }
 
-h1 {
+h1.time {
   text-align: center;
 }
 
 #crypto {
-  display: flex;
-  align-items: center;
+  font-size: 1.3rem;
 }
 
-#crypto > span {
+#crypto#top-display > span {
   margin-left: 0.5em;
 }
 
